--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ build-AudioSearchQT-Desktop_Qt_5_7_0_clang_64bit-Debug/
 build-AudioSearchQT-Desktop_Qt_5_8_0_clang_64bit-Debug/
 
 AudioSearchCLI/AudioSearchCLI\.xcodeproj/project\.xcworkspace/xcuserdata/michael\.xcuserdatad/
+
+AudioSearchTests/
