--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ build-AudioSearchQT-Desktop_Qt_5_8_0_clang_64bit-Debug/
 AudioSearchCLI/AudioSearchCLI\.xcodeproj/project\.xcworkspace/xcuserdata/michael\.xcuserdatad/
 
 AudioSearchTests/
+
+build-AudioSearchQT-Desktop_Qt_5_8_0_clang_64bit-Release/
