--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ AudioSearchCLI/AudioSearchCLI\.xcodeproj/project\.xcworkspace/xcuserdata/michael
 AudioSearchTests/
 
 build-AudioSearchQT-Desktop_Qt_5_8_0_clang_64bit-Release/
+
+soundnet/
