--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ AudioSearchTests/
 build-AudioSearchQT-Desktop_Qt_5_8_0_clang_64bit-Release/
 
 soundnet/
+
+build-AudioSearchQT-Desktop_Qt_5_8_0_clang_64bit-Profile/
