--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-
-build-AudioSearchQT-Desktop_Qt_5_7_0_clang_64bit-Debug/
+# OSX temp files
+.DS_Store
+.Trashes
+*.lock
 
 *.autosave
 *.swp
@@ -30,14 +32,18 @@ build-AudioSearchQT-Desktop_Qt_5_7_0_clang_64bit-Debug/
 *.exe
 *.out
 *.app
-build-AudioSearchQT-Desktop_Qt_5_8_0_clang_64bit-Debug/
-
-AudioSearchCLI/AudioSearchCLI\.xcodeproj/project\.xcworkspace/xcuserdata/michael\.xcuserdatad/
 
 AudioSearchTests/
-
-build-AudioSearchQT-Desktop_Qt_5_8_0_clang_64bit-Release/
-
+Testing/
 soundnet/
 
-build-AudioSearchQT-Desktop_Qt_5_8_0_clang_64bit-Profile/
+# IDE Files
+build*/
+AudioSearchCLI/AudioSearchCLI\.xcodeproj/project\.xcworkspace/xcuserdata/michael\.xcuserdatad/
+AudioSearchCLI/\.idea/
+*.pbxuser
+!*default.pbxuser
+xcuserdata/**/*
+
+
+
